Fix Mist font-size for Posts on mobile
Before it felt unnatural, now it is much more readable

--- a/source/css/_schemes/Mist/_posts-expanded.styl
+++ b/source/css/_schemes/Mist/_posts-expanded.styl
@@ -22,10 +22,12 @@
     position: relative;
     font-size: $font-size-headings-base;
     font-weight: 400;
-    +mobile() { font-size: $font-size-headings-smaller; }
+    +mobile() { font-size: $font-size-headings-small; }
     +desktop-large() { font-size: $font-size-headings-large; }
   }
   .post-title:hover:before { background: $black-deep; }
+
+  .post-body { font-size: $font-size-small }
 
   .post-body img { margin: 0; }
 
